# Worsaga

./: .gitignore  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: package-smoke.yml
src/worsaga/: __init__.py  banner.py  cli.py  client.py  config.py  deadlines.py  extraction.py  materials.py  mcp_server.py  sections.py  summaries.py  summary_text.py
tests/: test_banner.py  test_cli.py  test_client.py  test_config.py  test_deadlines.py  test_download.py  test_extraction.py  test_materials.py  test_mcp_server.py  test_summaries.py
